client/src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

body
{
    margin: 0;
    padding: 0;
}

.shoeDetailWrapper {
  display: flex;
  height: 600px;
  width: 1400px;
  margin-left: 200px;
}
/* .infoContainer {
  /* padding-left: 20px; */
  /* width: 150px; */
   /* position:absolute; */
  /* margin-left: 60%;  */
  /* height: 50px;
  width: 50px;
} */ 

#productId {
  font-family: 'Roboto', sans-serif;
  font-size: 14px;
  padding-left: 300px;
}
#brandName {
  font-family: 'Montserrat', sans-serif;
  font-size: 35px;
  padding-left: 20px;
}

#model {
  font-family: 'Montserrat', sans-serif;
  font-size: 20px;
  color: rgba(0, 0, 0, 0.85);
  margin-bottom: 15px;
  padding-left: 20px;
}

#price {
  font-family: 'Roboto', sans-serif;
  font-size: 30px;
  padding-left: 20px;
}
#price::first-letter {
  font-size: 80%;
  font-family: 'Roboto', serif;
}
.detailsContainer {
  display: flex;
  margin-left: 180px;
  padding-bottom: 100px;
}
.description {
  font-family: 'Montserrat', sans-serif;
  width: 550px;
  padding-right: 300px;
}
#ratingBar {
  width: 700px;
}
.reviews {
  display: flex;
  width: 1700px;
  padding-bottom: 200px;
}
.reviews #reviewTitle {
  font-family: 'Montserrat', sans-serif;
  font-size: 18px;
  color: rgba(0, 0, 0, 0.85);
}
.reviewSummary {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  font-weight: 300;
  line-height: 1.5;
}
.positiveReview {
 height: 400px;
 width: 650px;
 padding-left: 200px;
 padding-right: 75px;
}
.criticalReview {
  height: 400px;
  width: 650px;
}
.horizontalDivider {
  display: block;
  border-bottom: 8px solid rgba(0, 0, 0, 0.4);
  height: 10px;
  width: 1400px;
  margin-left: 200px;
  margin-bottom: 50px;
}
.reviewDivider {
  display: inline-block;
  border-left: 8px solid rgba(0, 0, 0, 0.4);
  height: 430px;
  margin-right: 75px;
}

.rateContainer {
  display: flex;
  align-items: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 17px;
  font-weight: 600;
  color: rgba(0, 0, 0, 0.80);
}

#ratingDetails {
  padding-right: 25px;
}

.topBar {
  height: 120px;
  width: auto;
  background-color: #00BFFF;
  z-index: 4;
}

.storeLogo {
  height: 275px;
  width: 250px;
  margin-left: 40px;
  position: relative;
  z-index: 2;
}

.brandsContainer {
  position: relative;
  margin: auto;
  width: 900px;
  height: 600px;
}
#brand {
  width: 225px;
  height: 150px;
  padding: 25px;
}

.allStars {
  padding-left: 20px;
}

/* Stars and rating totals */

.stars {
    display:inline-block;
    width:auto;
    position:relative;
    font-size: 20px;
    /* border:2px outset #FC0;
    border-radius:5px; */
    background-color:white;
    padding: 2px;
  }
  
  .stars:BEFORE {
    content:"★★★★★";
    position:absolute;
    overflow:hidden;
    z-index:1;
    left:0px;
    top:0px;
   
    
    color:#FC0;
    text-shadow:0px 1px 0 #000, 0 -1px 0 #fff;
  }
  
  .stars:AFTER {
    content:"★★★★★";
    position:relative;
    color:#fff;
  }
  
  
  .stars.rate:AFTER {
    position:absolute;
    left:0px;
  }
  
  .stars.rate > A {
    color:transparent;
    text-decoration:none;
    position:relative;
    z-index:2;
  }
  
  .stars.rate:HOVER:BEFORE,
  .stars.rate:HOVER:AFTER {
    display:none;
  }
  
  .stars.rate:HOVER > A {
    color:#FC0;
    text-shadow:0px 1px 0 #000, 0 -1px 0 #fff;
  }
  
  .stars.rate:HOVER > A:HOVER {
    color:#FC0;
    text-shadow:0px 2px 0 #000, 0 -1px 0 #fff;
    top:-1px;
  }
  
  .stars.rate >A:HOVER ~ A {
    color:#fff;
    text-shadow:none;
  }
  
  
  .stars:NOT([data-percent]):BEFORE,
  .stars[data-percent="0"]:BEFORE {
    display:none;
  }
  /* 1/4 a star */
  .stars[data-percent="5"]:BEFORE {
    width:8%;
  }
  /* 1/2 a star */
  .stars[data-percent="10"]:BEFORE {
    width:10%;
  }
  .stars[data-percent="15"]:BEFORE {
    width:13%;
  }
  /* 1 star */
  .stars[data-percent="20"]:BEFORE {
    width:20%;
  }
  /* 1 & 1/4 a star */
  .stars[data-percent="25"]:BEFORE {
    width:28%;
  }
  /* 1 & 1/2 stars */
  .stars[data-percent="30"]:BEFORE {
    width:30%;
  }
  /* 1 & 3/4 stars */
  .stars[data-percent="35"]:BEFORE {
    width:33%;
  }
  /* 2 stars */
  .stars[data-percent="40"]:BEFORE {
    width:40%;
  }
  /* 2 & 1/4 stars */
  .stars[data-percent="45"]:BEFORE {
    width:48%;
  }
  /* 2 & 1/2 stars */
  .stars[data-percent="50"]:BEFORE {
    width:50%;
  }
  /* 2 & 3/4 stars */
  .stars[data-percent="55"]:BEFORE {
    width:53%;
  }
  /* 3 stars */
  .stars[data-percent="60"]:BEFORE {
    width:60%;
  }
  /* 3 & 1/4 stars */
  .stars[data-percent="65"]:BEFORE {
    width:68%;
  }
  /* 3 & 1/2 stars */
  .stars[data-percent="70"]:BEFORE {
    width:70%;
  }
  /* 3 & 3/4 stars */
  .stars[data-percent="75"]:BEFORE {
    width:73%;
  }
  /* 4 stars */
  .stars[data-percent="80"]:BEFORE {
    width:80%;
  }
  /* 4 & 1/4 stars */
  .stars[data-percent="85"]:BEFORE {
    width:88%;
  }
  /* 4 & 2/4 stars */
  .stars[data-percent="90"]:BEFORE {
    width:90%;
  }/* 4 & 3/4 stars */
  .stars[data-percent="95"]:BEFORE {
    width:93%;
  }/* 5 stars */
  .stars[data-percent="100"]:BEFORE {
    width:100%;
  }

  .bar-ratings {
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    font-weight: 300;
    /* line-height: 1.5; */
  }
  
  .ratings-graph .rating {
    -webkit-animation: fade-in-text 2.2s 0.1s forwards;
    -moz-animation: fade-in-text 2.2s 0.1s forwards;
    animation: fade-in-text 2.2s 0.1s forwards;
    opacity: 0;
  }
  
  .ratings-graph-horizontal {
    max-width: 400px;
  }
  
  .ratings-graph-horizontal > div {
    float: left;
    margin-bottom: 8px;
    width: 100%;
    background-color: lightgrey;
    opacity: 0.85;
    
  }
  
  .ratings-graph-horizontal .rating {
    float: left;
    width: 15px;
    padding-top: 20px;
    padding-bottom: 20px;
    background-color: white;
  }

  .ratings-graph-horizontal .totalRatings {
    float: right;
    margin-top: 18px;
    font-weight: 600;
  }
  
  .ratings-graph-horizontal .ratings {
    border-radius: 3px;
    height: 55px;
    float: left;
    overflow: hidden;
    position: relative;
    width: 0;
    max-width: 400px;
  }
  .ratings-graph-horizontal .numOfRatings {
    float: right;
    overflow: hidden;
    position: relative;
    width: 90px;
  }

  .ratings-graph-horizontal .wordRating {
    float: left;
    overflow: hidden;
    position: relative;
    width: 90px;
    padding-top: 10px;
  }
  
  .ratings-graph-one .ratings::after {
    -webkit-animation: fade-in-text 2.2s 0.1s forwards;
    -moz-animation: fade-in-text 2.2s 0.1s forwards;
    animation: fade-in-text 2.2s 0.1s forwards;
  }
  
  .ratings-graph-one .ratings-one .ratings {
    background-color: #2ecc71;
    -webkit-animation: show-ratings-one 1.2s 0.1s forwards;
    -moz-animation: show-ratings-one 1.2s 0.1s forwards;
    animation: show-ratings-one 1.2s 0.1s forwards;
  }
  
  .ratings-graph-one .ratings-two .ratings {
    background-color: #2ecc71;
    -webkit-animation: show-ratings-two 1.2s 0.2s forwards;
    -moz-animation: show-ratings-two 1.2s 0.2s forwards;
    animation: show-ratings-two 1.2s 0.2s forwards;
  }
  
  .ratings-graph-one .ratings-three .ratings {
    background-color: #2ecc71;
    -webkit-animation: show-ratings-three 1.2s 0.3s forwards;
    -moz-animation: show-ratings-three 1.2s 0.3s forwards;
    animation: show-ratings-three 1.2s 0.3s forwards;
  }
  
  .ratings-graph-one .ratings-four .ratings {
    background-color: #2ecc71;
    -webkit-animation: show-ratings-four 1.2s 0.4s forwards;
    -moz-animation: show-ratings-four 1.2s 0.4s forwards;
    animation: show-ratings-four 1.2s 0.4s forwards;
  }
  
  .ratings-graph-one .ratings-five .ratings {
    background-color: #2ecc71;
    -webkit-animation: show-ratings-five 1.2s 0.4s forwards;
    -moz-animation: show-ratings-five 1.2s 0.4s forwards;
    animation: show-ratings-five 1.2s 0.4s forwards;
  }
  
  /* Horizontal Animations */
  @-webkit-keyframes show-ratings-one {
    0% {
      width: 0;
    }
    
  }
  
  @-webkit-keyframes show-ratings-two {
    0% {
      width: 0;
    }
  }
  
  @-webkit-keyframes show-ratings-three {
    0% {
      width: 0;
    }
  }
  
  @-webkit-keyframes show-ratings-four {
    0% {
      width: 0;
    }
  }

  @-webkit-keyframes show-ratings-five {
    0% {
      width: 0;
    }
  }
  
  @-webkit-keyframes fade-in-text {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
  
  

